--------------
Jul 27, 2023
Name: Boqin Zhang
* Add rscan meta-GGA functional

--------------
Jul 06, 2023
Name: Xin Jing
* put exx/, vdw/ and mgga/ into xc/ folder.
* Adding path of these folders in the beginning of the code.

--------------
Jun 27, 2023
Name: Boqin Zhang
* Add r2scan meta-GGA functional

--------------
Jun 26, 2023
Name: Xin Jing, Boqin Zhang
* Decompose exchange correlation functionals.
* Pre-release source code of non-collinear spin but it's disabled until fully tested.

--------------
Apr 08, 2023
Name: Xin Jing
* Change the default SCF tolerance for 1E-5 Ha/atom energy accuracy in single point calculation.
* Change the default SCF tolerance for 1E-3 Ha/bohr force accuracy in MD context.
* Change the default SCF tolerance for TOL_RELAX/5 Ha/bohr force accuracy in relaxation context.
* Update documentation.

--------------
Apr 03, 2023
Name: Xin Jing
* Reduce memory usage during Chebyshev filtering

--------------
Feb 12, 2023
Name: Xin Jing
* Always print atomic mass in .out file

--------------
Feb 07, 2023
Name: Xin Jing
* Add density in .out file

----------------
Feb 06, 2023
Name: Xin Jing, Shashikant Kumar
* Change rounding convenction of mesh size to use ceil rather than round
* Update SPMS psps list
* Update testsuite

----------------
Feb 1, 2023
Name: Xin Jing, Shashikant Kumar
* Change r_core from value in pseudopotential file to actual r where projectors are below < 1E-8
* fix SCF time in output file and change name format of output format as SPARC
* update testsuite

----------------
Jan 23, 2023
Name: Xin Jing, Shashikant Kumar
* Change the pseudocharge rb upper bound and the default TOL_PSEUDOCHARGE to 1E-3 * TOL_SCF
* update testsuite and documentation

----------------
Jan 02, 2023
Name: Shashikant Kumar
* Added 'run_local' feature in the testing framework


----------------
Dec 11, 2022
Name: Shashikant Kumar
* Updated the version number printing on the top of .out file to be same as SPARC
* Updated test suite reference files